# wazzup

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: ci.yml  release.yml
sample/: .gitignore  Cargo.toml  index.html
sample/assets/: main.sass
sample/assets/icons/: favicon.txt
sample/sample-two/: Cargo.toml
sample/src/: main.rs
src/: build.rs  cli.rs  main.rs  minify.rs  status.rs  tools.rs
src/server/: mod.rs  reload.js
src/watch/: debouncer.rs  mod.rs  watcher.rs
