[package]
name = "wazzup"
version = "0.4.1"
edition = "2021"
license = "AGPL-3.0-only"
description = "Very opinionated Rust WASM project builder"
homepage = "https://github.com/dnaka91/wazzup"
repository = "https://github.com/dnaka91/wazzup"
keywords = ["build-tool", "dev-server", "tauri", "wasm"]
categories = ["command-line-utilities", "development-tools", "wasm", "web-programming"]
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
include = ["src/**/*", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
axum = { version = "0.7.4", features = ["http2", "ws"] }
cargo-lock = "9.0.0"
clap = { version = "4.4.18", features = ["derive", "wrap_help"] }
clap_complete = "4.4.9"
clap_mangen = "0.2.17"
color-eyre = { version = "0.6.2", default-features = false }
directories = "5.0.1"
flume = "0.11.0"
ignore = "0.4.22"
minify-html = "0.15.0"
minify-js = "0.6.0"
notify = "6.1.1"
once_cell = "1.19.0"
semver = "1.0.21"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
serde_path_to_error = "0.1.15"
tabled = { version = "0.15.0", features = ["ansi", "derive"] }
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["macros", "rt", "sync"] }
tokio-shutdown = "0.1.4"
toml = "0.8.8"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
which = "6.0.0"
yansi = "1.0.0-rc.1"

[dev-dependencies]
assert_fs = "1.1.1"
indoc = "2.0.4"

[profile.release]
lto = "thin"
strip = true
